# CPred

./: .gitignore  =2.0.1  S2.xls  plan.md  pyproject.toml  requirements.txt  wip.txt
.claude/: settings.local.json
cpred/: __init__.py  cli.py  pipeline.py
cpred.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cpred/data/: hi_tree.json
cpred/data/propensity_tables/: di_dssp.json  di_kappa_alpha.json  di_ramachandran.json  di_residue.json  dssp.json  kappa_alpha.json  oligo_residue.json  ramachandran.json  single_aa.json
cpred/data/trained_models/: ann.pt  hi.json  rf.pkl  (+1 more)
cpred/features/: aa_alphabets.py  contact_network.py  gnm.py  secondary_structure.py  sequence_propensity.py  standardization.py  structural_codes.py  tertiary_structure.py  window.py
cpred/io/: output.py  pdb_parser.py
cpred/models/: ann.py  ensemble.py  hierarchical.py  random_forest.py  svm.py
cpred/propensity/: scoring.py  tables.py
cpred/training/: data_loader.py  evaluate.py  train.py
data/: features_cache.npz
data/rmsf/: 1a2j.csv  1gfl.csv  1pii.csv  1rx4.csv  2b3p.csv  2b3q.csv  5mbn.csv
data/supplementary/: Dataset_L.xls  Dataset_S1.xls  Dataset_S2.csv  Dataset_S2.xls  Dataset_S4.csv  Dataset_S4.xls  Dataset_S5.xls  Table_S1.xls  Table_S2.xls  Table_S3.xls  dataset_dhfr.csv  dataset_t.csv
scripts/: build_propensity_tables.py  convert_dataset_l.py  cross_validate.py  diagnose_features.py  download_data.py  hyperparameter_search.py  prepare_and_train.py  train_all_models.py
tests/: test_features.py  test_models.py  test_pipeline.py
